[package]
name = "QuantumSafe-SMB-Link"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
oqs = "0.8"                   # Rust bindings to liboqs
x25519-dalek = "2"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
rand_core = "0.6"
anyhow = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cc = "1"


