[package]
name = "QuantumSafe-SMB-Link"
version = "0.1.0"
edition = "2021"

[dependencies]
# PQ signatures + KEM (pure Rust, Windows-friendly)
pqcrypto-dilithium = "0.5.0"
pqcrypto-kyber     = "0.8.0"
pqcrypto-traits    = "0.3.5"

# Classical ECDH for hybrid (you can add later if you’re not using it yet)
x25519-dalek = "2"

# AEAD + KDF + hashing + error handling
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
anyhow = "1"

# RNGs (needed if you call EphemeralSecret::random or similar)
rand_core = "0.6"
tokio = { version = "1.48.0", features = ["full"] }
bytes = "1.10.1"
clap = { version = "4.5.51", features = ["derive"] }
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[build-dependencies]
cc = "1"

[[bin]]
name = "gen-keys"
path = "src/gen_keys.rs"
